--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
       <div class="container footer">
           <div class="row">
-            <div class="col">
+            <div class="col nounderline">
                 <h1> <href="#">Brandname</h1>
                 <div class="brand"><a href="#"><img src="images/brand.jpg" alt="Nombre de tu empresa"></a></div>
                 <div class="etiqueta">Ligera descripción la empresa &copy; Empresa</div>
@@ -31,16 +31,16 @@
             <div class="col">
                     <h1>Plataforma</h1>
                     <ul>
-                        <li><a href="#">Creadores</a></li>
-                        <li><a href="#">Marcas y contenidos</a></li>
-                        <li><a href="#">Precio</a></li>
-                        <li><a href="#">Comunidad</a></li>
+                        <li><a class="hvr-underline-from-center" href="#">Creadores</a></li>
+                        <li><a class="hvr-underline-from-center" href="#">Marcas y contenidos</a></li>
+                        <li><a class="hvr-underline-from-center" href="#">Precio</a></li>
+                        <li><a class="hvr-underline-from-center" href="#">Comunidad</a></li>
                     </ul>
             </div>
             <div class="col">
                 <h1>Empresa</h1>
                 <ul>
-                    <li><a href="#">¿Quienes somos?</a></li>
+                    <li><a class="hvr-underline-from-center" href="#">¿Quienes somos?</a></li>
                 </ul>
             </div>
             <div class="col">
@@ -65,6 +65,5 @@
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <p>prueba 2</p>
   </body>
 </html>
